--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -31,14 +31,14 @@
     </p>
     <p>
       <strong>Valor del contrato:</strong>
-      <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+      <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
         novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
     </p>
     <p>
       <strong>Plazo:</strong>
       <span>
-        {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoMeses }} Meses 
-        {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoDias }} Días 
+        {{ novedad?.contrato?.contratacion?.plazoContratacion != null ? (novedad?.contrato?.contratacion?.plazoContratacion?.plazoMeses) : 0 }} Meses
+        {{ novedad?.contrato?.contratacion?.plazoContratacion != null ? (novedad?.contrato?.contratacion?.plazoContratacion?.plazoDias) : 0 }} Días
       </span>
     </p>
     <p>
@@ -149,14 +149,14 @@
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <strong>Motivos de la novedad:</strong> 
+        <strong>Motivos de la novedad:</strong>
             <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo; let i = index">
               {{ motivo.nombreMotivo
               }}<span *ngIf="i + 1 !== descripcion.novedadContractualDescripcionMotivo.length">,</span>
-            </section> 
-        
+            </section>
+
         <p><strong>Resumen de la justificación de la novedad: </strong></p>
-          <section 
+          <section
                   [innerHTML]="descripcion.resumenJustificacion"
                   style="margin-left: 2em"
           ></section>
@@ -184,14 +184,14 @@
           <strong *ngIf="descripcion.tipoNovedadCodigo == '1'">Fecha final de la suspensión: </strong>
           <strong *ngIf="descripcion.tipoNovedadCodigo == '2'">Fecha final de la prórroga a las suspensión: </strong>
           <strong *ngIf="descripcion.tipoNovedadCodigo == '6'">Fecha final del reinicio: </strong>
-          {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} 
+          {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
         </p>
 
         <p *ngIf="descripcion.tipoNovedadCodigo == '3'" ><strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado | currency: '':'symbol':'3.0' }} </p>
 
         <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
           <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
-            <mat-card-title class="header-card--text sub-text"> 
+            <mat-card-title class="header-card--text sub-text">
               Cláusula {{ i + 1 }}
             </mat-card-title>
             <p><strong>Cláusula a modificar: </strong> </p>
@@ -203,7 +203,7 @@
 
         <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
         <p><strong>Concepto técnico: </strong></p>
-        <section 
+        <section
                   [innerHTML]="descripcion.conceptoTecnico"
                   style="margin-left: 2em"
           ></section>
