--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
@@ -139,19 +139,19 @@
       </p> -->
       <p>
         <strong>Valor del contrato:</strong>
-        {{ (contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+        {{ (contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
           contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}
       </p>
       <p>
         <strong>Plazo:</strong>
         {{
-          contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
-          (contrato?.contratacion?.disponibilidadPresupuestal[0]?.plazoMeses) : 0
+          contrato?.contratacion?.plazoContratacion != null ?
+          (contrato?.contratacion?.plazoContratacion?.plazoMeses) : 0
         }}
         meses /
         {{
-            contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
-            (contrato?.contratacion?.disponibilidadPresupuestal[0]?.plazoDias) : 0
+          contrato?.contratacion?.plazoContratacion != null ?
+          (contrato?.contratacion?.plazoContratacion?.plazoDias) : 0
         }}
         días
       </p>
@@ -191,7 +191,7 @@
     </mat-card-content>
   </mat-card>
 
-  <div class="animatedDown" 
+  <div class="animatedDown"
         *ngIf="(novedadAplicada.value == true && contrato) || ( novedadAplicada.value == false && proyecto)">
     <app-expansion-panel-interventoria
                                       [proyecto]=proyecto
