--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
@@ -8,7 +8,7 @@
   </button>
 
   <h1 class="title-menu--h1" style="margin-bottom: 2em;">
-    Observaciones para la devolución o rechazo del proyecto.
+    Observaciones de la votación
   </h1>
 
   <section class="d-flex" style="justify-content: center;">
