--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -167,11 +167,7 @@
           color="accent"
           class="btn-table"
           [disabled]="
-            element.proyecto.estadoProyectoInterventoriaCodigo == null||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 1 ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 2 ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 3 ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 4
+            element.proyecto.estadoProyectoInterventoriaCodigo == null
           "
         >
           Observaciones
