--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
@@ -5,7 +5,7 @@
 <section class="scroll">
   <div class="text-center">
     <h1 class="title-menu--h1">
-      Observaciones para la devolución o rechazo del proyecto
+      Observaciones de la votación
     </h1>
     <b class="sub-text">
       {{ institucionEducativa }}
