--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -156,11 +156,7 @@
           color="accent"
           class="btn-table"
           [disabled]="
-            element.proyecto.estadoProyectoObraCodigo == null ||
-            element.proyecto.estadoProyectoObraCodigo == 1 ||
-            element.proyecto.estadoProyectoObraCodigo == 2 ||
-            element.proyecto.estadoProyectoObraCodigo == 3 ||
-            element.proyecto.estadoProyectoObraCodigo == 4
+            element.proyecto.estadoProyectoObraCodigo == null
           "
         >
           Observaciones
@@ -187,11 +183,7 @@
           color="accent"
           class="btn-table"
           [disabled]="
-            element.proyecto.estadoProyectoInterventoriaCodigo == null ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 1 ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 2 ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 3 ||
-            element.proyecto.estadoProyectoInterventoriaCodigo == 4
+            element.proyecto.estadoProyectoInterventoriaCodigo == null
           "
         >
           Observaciones
