--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
@@ -532,11 +532,11 @@
               <div class="row">
                 <div class="pr-1">
                   <label
-                    for="nombreDepartamento"
+                    for="departamento"
                     class="label-left"
                     [class.color-secondaryColor]="
-                      (proponente.get('nombreDepartamento')?.invalid && proponente.get('nombreDepartamento').touched) ||
-                      (proponente.get('nombreDepartamento')?.invalid && estaEditando)
+                      (proponente.get('departamento')?.invalid && proponente.get('departamento').touched) ||
+                      (proponente.get('departamento')?.invalid && estaEditando)
                     "
                   >
                     Departamento del domicilio del proponente
@@ -548,7 +548,7 @@
                       <mat-option
                         *ngFor="let departamento of listaDepartamentos"
                         class="capitalize"
-                        [value]="departamento"
+                        [value]="departamento.localizacionId"
                       >
                         {{ departamento.descripcion }}
                       </mat-option>
@@ -564,8 +564,8 @@
                     matTooltip="Debe ingresar la información en el campo para continuar"
                     matTooltipClass="info-tooltip"
                     *ngIf="
-                      (proponente.get('nombreDepartamento')?.invalid && proponente.get('nombreDepartamento').touched) ||
-                      (proponente.get('nombreDepartamento')?.invalid && estaEditando)
+                      (proponente.get('departamento')?.invalid && proponente.get('departamento').touched) ||
+                      (proponente.get('departamento')?.invalid && estaEditando)
                     "
                   />
                 </span>
