--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -163,6 +163,7 @@
                                             (estadoSemaforo)="getSemaforoAcordeon( 'formaPago', $event )">
                 </app-obs-cargar-forma-pago>
             </mat-expansion-panel>
+
             <mat-expansion-panel class="expansion-style">
                 <mat-expansion-panel-header class="expansion-style--header">
                     <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeones.estadoSolicitudPago">
@@ -175,6 +176,26 @@
                                                     [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
                                                     (estadoSemaforoRegistroSolicitud)="estadoAcordeones.estadoSolicitudPago = $event">
                 </app-obs-registrar-solicitud-pago>
+            </mat-expansion-panel>
+
+            <mat-expansion-panel class="expansion-style">
+                <mat-expansion-panel-header class="expansion-style--header">
+                    <mat-panel-title class="expansion-style--title sin-diligenciar">
+                        Descripción de la factura
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+                <app-descripcion-factura [contrato]="contrato"></app-descripcion-factura>
+            </mat-expansion-panel>
+
+            <mat-expansion-panel class="expansion-style">
+                <mat-expansion-panel-header class="expansion-style--header">
+                    <mat-panel-title class="expansion-style--title sin-diligenciar">
+                        Detalle factura para proyectos asociados
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+                <app-detalle-factura-proyectos [contrato]="contrato"></app-detalle-factura-proyectos>
             </mat-expansion-panel>
         </mat-accordion>
     </ng-container>
