--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-valid-listachequeo/obs-valid-listachequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-valid-listachequeo/obs-valid-listachequeo.component.html
@@ -2,7 +2,7 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style sub-expansion" formArrayName="listas" *ngFor="let lista of listas.controls; index as i">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === false ? lista.get( 'semaforo' ).value : ''" style="font-size: .8em !important;">
+                <mat-panel-title class="expansion-style--title">
                     {{ firstLetterUpperCase( lista.get( 'solicitudPagoListaChequeo' ).value.listaChequeo.nombre ) }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -30,6 +30,7 @@
                 </table>
             </div>
 
+            <!--
             <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
                 <mat-card class="shipping-card var-main-gris">
                     <mat-card-header class="header-card header-card--margin">
@@ -75,6 +76,7 @@
                         <img src="assets/img/icon/guardar.svg" alt="Guardar">
                     </button>
             </ng-template>
+            -->
         </mat-expansion-panel>    
     </mat-accordion>
 </form>
