--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
@@ -532,11 +532,11 @@
               <div class="row">
                 <div class="pr-1">
                   <label
-                    for="departamento"
+                    for="nombreDepartamento"
                     class="label-left"
                     [class.color-secondaryColor]="
-                      (proponente.get('departamento')?.invalid && proponente.get('departamento').touched) ||
-                      (proponente.get('departamento')?.invalid && estaEditando)
+                      (proponente.get('nombreDepartamento')?.invalid && proponente.get('nombreDepartamento').touched) ||
+                      (proponente.get('nombreDepartamento')?.invalid && estaEditando)
                     "
                   >
                     Departamento del domicilio del proponente
@@ -564,8 +564,8 @@
                     matTooltip="Debe ingresar la información en el campo para continuar"
                     matTooltipClass="info-tooltip"
                     *ngIf="
-                      (proponente.get('departamento')?.invalid && proponente.get('departamento').touched) ||
-                      (proponente.get('departamento')?.invalid && estaEditando)
+                      (proponente.get('nombreDepartamento')?.invalid && proponente.get('nombreDepartamento').touched) ||
+                      (proponente.get('nombreDepartamento')?.invalid && estaEditando)
                     "
                   />
                 </span>
