Estado devolución - procesos contractuales
Modificación DB:
Dominio=> TipoDominio: 29, code:12
Dominio=> TipoDominio: 31, code:24-25
Dominio=> TipoDominio: 157, code:28
Dominio=> TipoDominio: 187, code:4
Dominio=> TipoDominio: 17, code:285
Vista => V_Lista_Contratacion_Modificacion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/procesos-contractuales/procesos-contractuales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/procesos-contractuales/procesos-contractuales.component.html
@@ -54,6 +54,15 @@
         </mat-expansion-panel-header>
         <app-tabla-registrados (sinData)="estadoAcordeonRegistrados = $event" [$data]="$data"></app-tabla-registrados>
       </mat-expansion-panel>
+
+      <mat-expansion-panel class="expansion-style">
+        <mat-expansion-panel-header class="expansion-style--header">
+          <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeonDevueltas">
+            Devueltas por procesos contractuales
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <app-tabla-solicitudes-devueltas [$data]="$data" (estadoSemaforo)="estadoAcordeonDevueltas = $event"></app-tabla-solicitudes-devueltas>
+      </mat-expansion-panel>
     </mat-accordion>
   </section>
 
