--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
@@ -51,7 +51,7 @@
             >
                 Verificar requisitos para liquidación
             </a>
-            <a *ngIf="element.estadoTramiteLiquidacionCodigo === '1' || element.estadoTramiteLiquidacionCodigo === '2'"
+            <a *ngIf="element.estadoTramiteLiquidacionCodigo === '1' || element.estadoTramiteLiquidacionCodigo === '2' || element.estadoTramiteLiquidacionCodigo === '4'"
                 mat-button
                 mat-raised-button
                 color="accent"
