--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/tabla-solicitudes-devueltas/tabla-solicitudes-devueltas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/tabla-solicitudes-devueltas/tabla-solicitudes-devueltas.component.html
@@ -29,62 +29,32 @@
     <ng-container matColumnDef="estadoDelRegistro">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
       <td mat-cell *matCellDef="let element" align="center">
-        <div class="flex-span" *ngIf="element.estadoRegistro">
+        <div class="flex-span">
           <span class="info-text completo mr-auto"></span>
           <span>
             {{ element.estadoDelRegistro }}
           </span>
         </div>
-        <div class="flex-span" *ngIf="!element.estadoRegistro">
-          <span class="info-text sin-diligenciar mr-auto"></span>
-          <span>
-            {{ element.estadoDelRegistro }}
-          </span>
-        </div>
       </td>
     </ng-container>
-
+  
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-15"> Gestión </th>
       <td mat-cell *matCellDef="let element">
 
         <button mat-raised-button
-                color="accent"
+                color="accent" 
                 class="btn-table"
-                *ngIf="!element.estadoRegistro && !element.estaTramitado"
                 (click)="gestionar( element.tipoSolicitud, element.solicitudId, element.sesionComiteSolicitudId, element.estadoCodigo )">
-                Gestionar solicitud
+                Ver detalle
         </button>
-
-        <button mat-raised-button
-                color="accent"
-                class="btn-table"
-                (click)="sendCambioTramite( element )"
-                *ngIf="element.estadoRegistro">
-                Enviar para trámite
-        </button>
-
-        <button mat-raised-button
-                color="accent"
-                class="btn-table"
-                *ngIf="element.estadoRegistro || (!element.estadoRegistro && element.estaTramitado)"
-                (click)="gestionar( element.tipoSolicitud, element.solicitudId, element.sesionComiteSolicitudId, element.estadoCodigo )">
-                Ver detalle/Editar
-        </button>
-        <button mat-raised-button
-            color="accent"
-            class="btn-table"
-            *ngIf="element.estadoRegistro || (!element.estadoRegistro && element.estaTramitado)"
-            (click)="openDialogObservaciones(element)"
-            >
-            Devolver
-        </button>
+  
       </td>
     </ng-container>
-
+  
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-
+  
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
